# clopsctl

./: .env.example  .gitignore  .mcp.json.example  README.md  pyproject.toml
docs/: architecture.md  compatibility.md  security.md  service.md
inventory/: servers.example.toml
scripts/: install.sh
src/clopsctl/: agent.py  cli.py  config.py  history.py  llm.py  permissions.py  safety.py  ssh.py  web.py
tests/: test_agent.py  test_followup.py  test_history.py  test_init.py  test_inventory_crud.py  test_jump.py  test_llm.py  test_per_server.py  test_permissions.py  test_safety.py  test_terminal.py  test_web.py
