[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clopsctl"
version = "0.0.1"
description = "Master-side SSH fleet controller for natural-language ops via Claude"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Yoo Jae Hyun" }]
keywords = ["ssh", "claude", "ops", "fleet", "mcp"]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "paramiko>=3.4",
    "python-dotenv>=1.0",
    "tomli>=2.0;python_version<'3.11'",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "anthropic>=0.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
clopsctl = "clopsctl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/clopsctl"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
